static/logger/css/main.sass.css
/* Base Layout Module State Theme */
/***** FONTS *****/
@font-face {
  font-family: bebas-neue;
  font-weight: bold;
  src: url("../../fonts/BebasNeue Bold.otf") format("opentype"); }

@font-face {
  font-family: century-gothic;
  src: url("../../fonts/CenturyGothicRegular.ttf"); }

/***** VARIABLES *****/
/***** BASE *****/
/* Container */
body {
  margin: 0;
  font-family: century-gothic; }

button {
  padding: 0;
  margin: 0;
  border: none; }

#container {
  margin: 0;
  position: relative;
  z-index: 1; }
  #container a.home_link {
    display: inline-block;
    height: 64px;
    width: 64px; }

input {
  outline: none; }

.transparent {
  color: transparent !important; }

img.banner {
  position: absolute;
  width: auto;
  height: 400px;
  z-index: -10; }

div.banner_tinter {
  position: absolute;
  width: 100%;
  height: 400px;
  background-color: #06a7e1;
  opacity: 0.8;
  z-index: -9; }

div.white_block {
  background-color: white;
  position: absolute;
  width: calc(100% - 10px);
  margin: 0 5px 0 5px;
  top: 285px;
  height: 300px;
  z-index: -8; }

div.white_block_2 {
  background-color: white;
  position: absolute;
  top: 335px;
  z-index: -7;
  width: 100%;
  height: 500px; }

/***** LAYOUT *****/
header {
  margin: 20px;
  position: relative; }
  header h1 {
    font-family: bebas-neue;
    font-size: 5.5em;
    font-weight: 400;
    line-height: 1em;
    width: 100%;
    margin: 0;
    margin-bottom: 45px;
    color: white; }
    header h1 img.signal_glyph {
      width: 50px;
      height: auto;
      margin: 0px 0px 0px 0px; }
  header h2 {
    font-size: 1.1em;
    font-weight: 200;
    width: calc(100% - 20px);
    margin: 0 0 20px 20px;
    margin-bottom: 20px;
    background-color: white; }

/***** MODULES *****/
/* Dropdowns */
.dropdown {
  width: 100%;
  position: relative;
  display: inline-block;
  /* Search Bar */ }
  .dropdown input {
    background: url(../../images/down_arrow.png) no-repeat scroll;
    background-position: right; }
    .dropdown input:hover {
      cursor: pointer; }
  .dropdown .dropdown_content {
    display: none;
    position: absolute;
    min-width: 80px;
    width: calc(100% - 20px);
    z-index: 1;
    background-color: white;
    border: 1px solid black;
    padding: 10px;
    font-size: 1.1em;
    line-height: 2em; }
    .dropdown .dropdown_content:hover {
      cursor: pointer; }
    .dropdown .dropdown_content span {
      display: block; }

#search_container {
  margin: 0px 20px 30px 20px;
  background-color: white;
  /* Input styles */
  /* Glyphs in search */
  /* Search button */
  /* Tracks */ }
  #search_container .search_revealer {
    width: 100%;
    display: none; }
  #search_container .search_content {
    width: 100%; }
  #search_container input {
    width: 100%; }
  #search_container input {
    border-width: 0 0 1px;
    height: 35px;
    font-size: 1em; }
    #search_container input:focus {
      border-color: #06a7e1; }
  #search_container ::placeholder {
    color: #969696; }
  #search_container .search_label {
    color: #8b8b8b;
    font-size: .8em;
    font-weight: bold;
    display: none; }
  #search_container input#date_search_input {
    background: url(../../images/cal.png) no-repeat scroll;
    background-position: right; }
  #search_container input#search_btn {
    height: 40px;
    background-color: #06a7e1;
    color: white;
    font-size: 1.1em;
    margin-top: 10px;
    flex-basis: 40px; }

table {
  width: 100%;
  padding-left: 5px;
  padding-right: 5px;
  background-color: white;
  /* Load more button */ }
  table thead {
    background-color: #2A2C2D; }
    table thead th {
      padding: 0; }
    table thead th:not(:first-of-type) {
      position: relative; }
    table thead h4 {
      font-family: bebas-neue;
      letter-spacing: 2px;
      font-size: 1.5em;
      margin: 0;
      color: white; }
  table tr {
    display: flex;
    padding: 7px 7px 4px 7px; }
  table tr:not(:last-child) {
    border-bottom: 1px solid #e7e7e7; }
  table td {
    padding: 0; }
  table tr:nth-child(even) {
    background-color: #fbfbfb; }
  table th {
    text-align: left; }
  table .artist_clmn, table .title_clmn, table .play_time_clmn, table .group_clmn {
    flex: 1; }

#load_more {
  width: 175px;
  height: 50px;
  background-color: white;
  color: #18A5DE;
  border: 1px solid #18A5DE;
  margin: 30px auto 30px auto;
  display: block;
  font-size: 15px;
  /* Misc */ }

.has_datepicker:hover, .datepicker-here:hover, .time_input:hover {
  cursor: pointer; }

/***** STATE *****/
/* Input Validation */
.error {
  display: block; }

.search_error_box {
  display: block;
  width: 100%;
  color: red; }

.has_error {
  margin-bottom: 10px;
  /* Media Queries */ }

@media (min-width: 394px) {
  div.white_block {
    top: 195px; }
  div.white_block_2 {
    top: 250px; } }

@media (min-width: 600px) {
  #search_container {
    position: relative; }
    #search_container div.search_revealer {
      width: calc(100% - 40px); }
    #search_container div.search_content {
      display: flex; }
    #search_container div.search_error_box {
      display: block; }
    #search_container input#search_btn {
      width: 40px;
      color: transparent;
      background: url(../../images/mag_glass.png) no-repeat scroll;
      background-position: 50% 50%;
      background-color: #06a7e1;
      position: absolute;
      bottom: 0px;
      right: 0px; }
    #search_container .search_label {
      display: block; }
    #search_container .ds_container {
      width: 100px;
      margin-right: 40px; }
    #search_container .ss_container {
      width: 85px;
      margin-right: 20px; }
    #search_container .es_container {
      width: 85px;
      margin-right: 40px; }
    #search_container .as_container {
      margin-right: 20px; }
    #search_container .ts_container {
      margin-right: 40px; }
    #search_container .as_container, #search_container .ts_container {
      flex: 1; } }

@media (min-width: 850px) {
  div.white_block {
    top: 250px;
    width: calc(100% - 100px);
    margin: 0 50px 0 50px; }
  div.white_block_2 {
    top: 350px; }
  header {
    margin: 40px 100px 40px 100px; }
    header h1 {
      font-size: 9em; }
      header h1 img.signal_glyph {
        width: 61px;
        height: auto;
        margin: 0px 5px 0px 0px; }
    header h2 {
      font-size: 1.5em;
      margin-bottom: 0; }
  #search_container {
    padding: 0px;
    margin: 0px 100px 75px 100px; }
  #add_track_btn_container {
    margin-top: -40px; }
  table {
    padding: 0 50px 0 50px; }
    table thead#column_headers tr {
      height: 28px;
      padding: 4px 30px 6px 30px; }
    table tr {
      padding: 15px 30px 15px 30px;
      font-size: 1.1em; } }

@media (min-width: 1056px) {
  img.banner {
    width: 100%;
    height: auto; }
  div.banner_tinter {
    width: 100%;
    height: 500px; } }

@media (min-width: 1240px) {
  div.white_block {
    width: 1100px;
    top: 250px;
    left: 50%;
    margin-left: -550px;
    height: 300px;
    z-index: -8; }
  div.white_block_2 {
    top: 400px; }
  header, #search_container {
    width: 940px;
    margin: 40px auto 40px auto; }
  #search_container {
    margin: 60px auto 70px auto; } }

@media (min-width: 1340px) {
  table {
    width: 1240px;
    margin: auto auto;
    padding: 0; } }

#add_track_btn_container {
  width: 100%;
  margin-bottom: 30px;
  display: flex;
  justify-content: center; }
  #add_track_btn_container #add_track_btn {
    width: 150px;
    height: 40px;
    background-color: #06a7e1;
    font-size: 1.1em;
    color: white; }

table .privileged_btn_clmn {
  width: 75px; }
  table .privileged_btn_clmn button {
    margin: auto auto;
    display: block;
    width: 90%;
    height: 100%; }
  table .privileged_btn_clmn button:hover {
    cursor: pointer; }
  table .privileged_btn_clmn button.delete_btn {
    background-color: #ff3232; }

table .privileged_inpt_clmn {
  flex: 1; }

table .privileged_btn_clmn, table .privileged_inpt_clmn {
  display: none; }

table .update_clmn, table .delete_clmn {
  display: table-cell; }

table input {
  margin: 0;
  padding: 0;
  font-size: 1em;
  border: none;
  background-color: transparent;
  border-bottom: 1px solid #06a7e1; }

/*# sourceMappingURL=../css/main.sass.css.map */

